<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                android:background="@mipmap/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_seventeen"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="Sign &amp; Register in to continue"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_seventeen"
                android:visibility="gone" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_gray">

                <EditText
                    android:id="@+id/edit_text_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="1234567890"
                    android:drawableLeft="@drawable/ic_smartphone"
                    android:drawablePadding="10dp"
                    android:hint="@string/str_phone_number"
                    android:inputType="textFilter|number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/app_bar_background"
                android:text="@string/str_login"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_explore_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/str_i_just_wanna_explore"
            android:textSize="12sp"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>