<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pin_content_layout"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:background="@drawable/white_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_label_text2"
            android:textSize="@dimen/sp12"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal" />

        <LinearLayout android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <EditText android:id="@+id/pin_first_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/pin_edittext_style" />

            <EditText android:id="@+id/pin_second_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/pin_edittext_style" />

            <EditText android:id="@+id/pin_third_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/pin_edittext_style" />

            <EditText android:id="@+id/pin_forth_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                style="@style/pin_edittext_style" />

        </LinearLayout>

        <EditText android:id="@+id/pin_hidden_edittext"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:cursorVisible="false"
            android:password="true"
            android:maxLength="5"
            android:textColor="#00000000"
            android:contentDescription="@string/pin_content_desc" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/dp10"
                android:id="@+id/btn_submit_id"
                android:background="@drawable/app_bar_background"
                android:text="@string/str_submit" />
        </RelativeLayout>



    </LinearLayout>


</LinearLayout>