<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pin_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:background="@mipmap/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/pin_label_margin"
            android:gravity="center_horizontal"
            android:text="@string/pin_label_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/pin_label_text2"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp13" />

        <LinearLayout
            android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pin_first_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/pin_second_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/pin_third_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <EditText
                android:id="@+id/pin_forth_edittext"
                style="@style/pin_edittext_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </LinearLayout>

        <EditText
            android:id="@+id/pin_hidden_edittext"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:contentDescription="@string/pin_content_desc"
            android:cursorVisible="false"
            android:gravity="center_horizontal"
            android:maxLength="5"
            android:password="true"
            android:textColor="#00000000" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/pin_label_margin"
            android:gravity="center_horizontal"
            android:text=""
            android:textColor="@color/light_gray"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_submit_id"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:background="@drawable/app_bar_background"
                android:text="@string/str_submit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp20"
                android:layout_toRightOf="@+id/btn_submit_id"
                android:text="RESEND"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>