<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llShop_Info"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/light_gray"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_shop_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/str_shop_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/light_gray">

                    <EditText
                        android:id="@+id/edt_shop_state_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_state"
                        android:drawablePadding="10dp"
                        android:editable="false"
                        android:fontFamily="@font/roboto_light"
                        android:hint="@string/str_state"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp15" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_auto_detect_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:drawableTop="@drawable/ic_auto_detect"
                    android:drawablePadding="5dp"
                    android:text="Auto Detect"
                    android:textColor="@color/gray"
                    android:textSize="10dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/light_gray">

                <EditText
                    android:id="@+id/edt_city_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_city"
                    android:drawablePadding="10dp"
                    android:editable="false"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/str_city"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/red_transparent">

                <EditText
                    android:id="@+id/edt_shop_address_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_streer_address"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="Business Address *"
                    android:inputType="text|textNoSuggestions"
                    android:maxLength="200"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>